temporary fix for mobile crashes by disabling elevation selection

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <div id="settingsLoading">Loading...</div>
         <div id="fullSettingsContents" style="display: none">
             <div id="extraStuff">
+                <a style="display: none">
                 <div><b>Elevation:</b></div>
                 <select id="elevInput">
                     <!-- <option value="1" selected>1</option>
@@ -140,6 +141,7 @@
                     <option value="17">17</option> -->
                 </select>
                 <br><br>
+                </a>
                 <input type="checkbox" id="shouldLowFilter">
                 <label for="shouldLowFilter">Low Filter</label>
                 <br><br>
