disabled a bunch of stuff due to an abundance of mobile crashes

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <canvas id="texturecolorbar" class="texturecolorbar" style="display: none"></canvas>
 
     <div id="settingsDialog" style="display: none">
-        <div id="settingsLoading">Loading...</div>
+        <div id="settingsLoading">Temporarily disabled due to bugs. Sorry!</div>
         <div id="fullSettingsContents" style="display: none">
             <div id="extraStuff">
                 <a style="display: none">
@@ -433,7 +433,7 @@
                 }
             }
             var theReflPlotControl = new reflPlotControl;
-            map.addControl(theReflPlotControl, 'top-left');
+            //map.addControl(theReflPlotControl, 'top-left');
         }
 
         class settingsControl {
