added scuffed data loading

--- a/index.html
+++ b/index.html
@@ -433,8 +433,9 @@
                 }
             }
             var theReflPlotControl = new reflPlotControl;
-            //map.addControl(theReflPlotControl, 'top-left');
+            map.addControl(theReflPlotControl, 'top-left');
         }
+        showPlotBtn();
 
         class settingsControl {
             onAdd(map) {
