--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta charset="utf-8">
     <title>NexradJS</title>
-    <link rel="icon" href="/logo.png">
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
@@ -62,17 +61,6 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-        }
-
-        #messageBox {
-            width: auto;
-            height: auto;
-            max-height: 50vh;
-            overflow: auto;
-            border: 1px solid rgb(0, 0, 0);
-            padding: 2px;
-            /*text-align: justify;*/
-            background: transparent;
         }
 
         #spinnerParent {
@@ -141,38 +129,29 @@
     <canvas id="texturecolorbar" class="texturecolorbar" style="display: none"></canvas>
 
     <div id="settingsDialog" style="display: none">
-        <div id="settingsLoading">Temporarily disabled due to bugs. Sorry!</div>
-        <div id="fullSettingsContents" style="display: none">
-            <div id="extraStuff">
-                <a style="display: none">
-                <div><b>Elevation:</b></div>
-                <select id="elevInput">
-                    <!-- <option value="1" selected>1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="17">17</option> -->
-                </select>
-                <br><br>
-                </a>
-                <input type="checkbox" id="shouldLowFilter">
-                <label for="shouldLowFilter">Low Filter</label>
-                <br><br>
-            </div>
-            <div><b>Product:</b></div>
-            <select id="productInput">
-                <option value="REF" selected>Reflectivity</option>
-                <option value="VEL">Velocity</option>
+        <div id="extraStuff">
+            <div><b>Elevation:</b></div>
+            <select id="elevInput">
+                <!-- <option value="1" selected>1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="17">17</option> -->
             </select>
-
-            <input style="display:none" autofocus>
+            <br><br>
+            <input type="checkbox" id="shouldLowFilter">
+            <label for="shouldLowFilter">Low Filter</label>
+            <br><br>
         </div>
+        <div><b>Product:</b></div>
+        <select id="productInput">
+            <option value="REF" selected>Reflectivity</option>
+            <option value="VEL">Velocity</option>
+        </select>
         <br><br>
         <div><b>Station:</b></div>
         <input id="userStation" value="KLWX">
-    </div>
 
-    <div id="messageDialog" style="display: none">
-        <div id="messageBox"></div>
+        <input style="display:none" autofocus>
     </div>
 
     <div id="map"></div>
@@ -210,37 +189,6 @@
     </script>
     <script src="./polygonTest/demo-radar-script.js"></script> -->
 
-    <script>
-        function logToModal(textContent) {
-            console.log(textContent);
-            function openMessageModal() {
-                $("#messageDialog").dialog({
-                    modal: true,
-                    // https://stackoverflow.com/a/30624445/18758797
-                    open: function () {
-                        $(this).parent().css({
-                            position: 'absolute',
-                            top: 10,
-                            maxHeight: '70vh',
-                            overflow: 'scroll'
-                        });
-                    },
-                });
-            }
-            if (!($("#messageDialog").dialog('instance') == undefined)) {
-                // message box is already initialized
-                if (!$('#messageDialog').closest('.ui-dialog').is(':visible')) {
-                    // message box is initialized but hidden - open it
-                    openMessageModal();
-                }
-            } else if ($("#messageDialog").dialog('instance') == undefined) {
-                // message box is not initialized, open it
-                openMessageModal();
-            }
-            $('#messageBox').append(`<div>${textContent}</div>`);
-            $("#messageBox").animate({ scrollTop: $("#messageBox")[0].scrollHeight}, 0);
-        }
-    </script>
     <script>
         function xmlToJson(xml) {
             if (typeof xml == "string") {
@@ -344,7 +292,7 @@
                 // event.total is only available if server sends `Content-Length` header
                 //console.log(`%c Downloaded ${formatBytes(event.loaded)} of ${formatBytes(event.total)}`, 'color: #bada55');
                 //var complete = (event.loaded / event.total * 50 | 0);
-                logToModal(formatBytes(event.loaded))
+                console.log(formatBytes(event.loaded))
             }
             xhr.send();
         }
@@ -435,7 +383,6 @@
             var theReflPlotControl = new reflPlotControl;
             map.addControl(theReflPlotControl, 'top-left');
         }
-        showPlotBtn();
 
         class settingsControl {
             onAdd(map) {
@@ -522,7 +469,6 @@
         map.addControl(theTestFileControl, 'top-right');
 
         function getLatestFile(sta, callbck) {
-            logToModal('loading latest file...')
             var curTime = new Date();
             var year = curTime.getUTCFullYear();
             var month = curTime.getUTCMonth() + 1;
@@ -562,7 +508,7 @@
                         $('#curFileThing').removeClass('icon-black');
                         getLatestFile($('#userStation').val(), function(fileName, y, m, d, s) {
                             var individualFileURL = `https://noaa-nexrad-level2.s3.amazonaws.com/${y}/${m}/${d}/${s}/${fileName}`
-                            logToModal(phpProxy + individualFileURL)
+                            console.log(phpProxy + individualFileURL)
                             loadFileObject(phpProxy + individualFileURL, fileName);
                         });
                     } else if ($('#curFileThing').hasClass('icon-selected')) {
@@ -638,8 +584,8 @@
             }
         }
     </script>
+    <script src="utils.js"></script>
     <script src="./dist/bundle.js"></script>
     <script src="./polygonTest/demo-radar-script.js"></script>
-    <script src="./polygonTest/generateVerticesRadarDemo.js"></script>
 </body>
 </html>
