--- a/index.html
+++ b/index.html
@@ -84,44 +84,86 @@
             width: 100%;
             background-color: rgba(0, 0, 0, 0.2);
         }
-        .spinner {
+        #spinnerDisplayText {
+            color: rgb(0, 162, 255);
+            /*background-color: rgb(87, 87, 87);*/
+            text-align: center;
+            margin: auto;
+            margin-top: 10%;
+            font-size: 30px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        /*
+        https://tobiasahlin.com/spinkit/
+        */
+        .sk-chase {
+            width: 40px;
+            height: 40px;
             position: absolute;
-            left: 50%;
-            top: 50%;
-            height:60px;
-            width:60px;
-            margin:0px auto;
-            -webkit-animation: rotation .6s infinite linear;
-            -moz-animation: rotation .6s infinite linear;
-            -o-animation: rotation .6s infinite linear;
-            animation: rotation .6s infinite linear;
-            border-left:6px solid rgba(0,174,239,.15);
-            border-right:6px solid rgba(0,174,239,.15);
-            border-bottom:6px solid rgba(0,174,239,.15);
-            border-top:6px solid rgba(0,174,239,.8);
-            border-radius:100%;
+            top:0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            animation: sk-chase 2.5s infinite linear both;
         }
-        @-webkit-keyframes rotation {
-            from {-webkit-transform: rotate(0deg);}
-            to {-webkit-transform: rotate(359deg);}
+        
+        .sk-chase-dot {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0; 
+            animation: sk-chase-dot 1.0s infinite ease-in-out both; 
         }
-        @-moz-keyframes rotation {
-            from {-moz-transform: rotate(0deg);}
-            to {-moz-transform: rotate(359deg);}
+        .sk-chase-dot:before {
+            content: '';
+            display: block;
+            width: 25%;
+            height: 25%;
+            background-color: #fff;
+            border-radius: 100%;
+            animation: sk-chase-dot-before 1.0s infinite ease-in-out both; 
         }
-        @-o-keyframes rotation {
-            from {-o-transform: rotate(0deg);}
-            to {-o-transform: rotate(359deg);}
+        .sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
+        .sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
+        .sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
+        .sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
+        .sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
+        .sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
+        .sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
+        .sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
+        .sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
+        .sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
+        .sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
+        .sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+        
+        @keyframes sk-chase {
+            100% { transform: rotate(360deg); } 
         }
-        @keyframes rotation {
-            from {transform: rotate(0deg);}
-            to {transform: rotate(359deg);}
+        @keyframes sk-chase-dot {
+            80%, 100% { transform: rotate(360deg); } 
+        }
+        @keyframes sk-chase-dot-before {
+            50% {
+                transform: scale(0.6); 
+            } 100%, 0% {
+                transform: scale(1.0); 
+            } 
         }
     </style>
 </head>
 <body>
     <div id="spinnerParent" style="display: none">
-        <div class="spinner"></div>
+        <div id="spinnerDisplayText">The radar is currently loading. Patience here is key - this should be quick.</div>
+        <div class="sk-chase">
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+        </div>
     </div>
     <div id="fileStation" style="display: none"></div>
     <div id="fileVersion" style="display: none"></div>
@@ -515,6 +557,7 @@
         map.addControl(theTestFileControl, 'top-right');
 
         function getLatestFile(sta, callbck) {
+            document.getElementById('spinnerParent').style.display = 'block';
             var curTime = new Date();
             var year = curTime.getUTCFullYear();
             var month = curTime.getUTCMonth() + 1;
