small value tweaks

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                         $('#testFileThing').removeClass('icon-black');
                         // KLIX20050829_061516.gz
                         // KTLX20130520_200356_V06.gz
-                        var fileToLoad = 'KLIX20050829_061516.gz';
+                        var fileToLoad = 'KTLX20130520_200356_V06.gz';
                         loadFileObject('data/' + fileToLoad, fileToLoad);
                     } else if ($('#testFileThing').hasClass('icon-selected')) {
                         $('#testFileThing').removeClass('icon-selected');
