--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     </div>
     <div id="fileStation" style="display: none"></div>
     <div id="fileVersion" style="display: none"></div>
+    <div id="level3json" style="display: none"></div>
     <div id="decodedRadarDataURL" style="display: none"></div>
     <!-- <a id="fileThatWorks" class="false-anchor">KTLX20130520_200356_V06.gz</a>
     <br>
