--- a/index.html
+++ b/index.html
@@ -623,8 +623,9 @@
                         $('#testFile3Thing').addClass('icon-selected');
                         $('#testFile3Thing').removeClass('icon-black');
                         // LWX_N0H_2022_04_18_15_21_24
+                        // LWX_N0Q_2022_04_18_15_21_24
                         // KOUN_SDUS54_N0STLX_201305200301
-                        var fileToLoad = 'LWX_N0H_2022_04_18_15_21_24';
+                        var fileToLoad = 'LWX_N0Q_2022_04_18_15_21_24';
                         loadFileObject('data/level3/' + fileToLoad, fileToLoad, 3);
                     } else if ($('#testFile3Thing').hasClass('icon-selected')) {
                         $('#testFile3Thing').removeClass('icon-selected');
@@ -718,9 +719,14 @@
             } else if ($('#levelInput').val() == 'l3') {
                 document.getElementById('productStuff').style.display = 'block';
 
+                document.getElementById('productInput').add(new Option('Base Reflectivity Tilt 1', 'p94r0', false, true));
+                document.getElementById('productInput').add(new Option('Base Reflectivity Tilt 2', 'p94r1'));
+                document.getElementById('productInput').add(new Option('Base Reflectivity Tilt 3', 'p94r2'));
+                document.getElementById('productInput').add(new Option('Base Reflectivity Tilt 4', 'p94r3'));
+
                 document.getElementById('productInput').add(new Option('Hybrid Hydrometer Classification', '177hh'));
 
-                document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 1', '165h0', false, true));
+                document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 1', '165h0'));
                 document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 2', '165h1'));
                 document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 3', '165h2'));
                 document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 4', '165h3'));
@@ -731,6 +737,8 @@
                 document.getElementById('productInput').add(new Option('Storm Relative Velocity Tilt 4', '56rm3'));
             }
         })
+        $('#levelInput').val('l3');
+        $('#levelInput').trigger('change');
 
         // radius of wsr-88d scan in km
         var radius = 460;
