--- a/index.html
+++ b/index.html
@@ -206,6 +206,16 @@
             </select>
             <br><br>
         </a>
+        <a id="tiltStuff" style="display: none">
+            <div><b>Tilt:</b></div>
+            <select id="tiltInput">
+                <option value="tilt1" selected>Tilt 1</option>
+                <option value="tilt2">Tilt 2</option>
+                <option value="tilt3">Tilt 3</option>
+                <option value="tilt4">Tilt 4</option>
+            </select>
+            <br><br>
+        </a>
         <div><b>Station:</b></div>
         <input id="userStation" value="KLWX">
         <br>
@@ -626,7 +636,8 @@
                         // LWX_N0H_2022_04_18_15_21_24
                         // LWX_N0Q_2022_04_18_15_21_24
                         // KOUN_SDUS54_N0STLX_201305200301
-                        var fileToLoad = 'LWX_N0Q_2022_04_18_15_21_24';
+                        // KCRP_SDUS54_N0UCRP_201708252357
+                        var fileToLoad = 'KCRP_SDUS54_N0UCRP_201708252357';
                         loadFileObject('data/level3/' + fileToLoad, fileToLoad, 3);
                     } else if ($('#testFile3Thing').hasClass('icon-selected')) {
                         $('#testFile3Thing').removeClass('icon-selected');
@@ -678,9 +689,10 @@
                 removeMapLayer('baseReflectivity');
                 // https://tgftp.nws.noaa.gov/SL.us008001/DF.of/DC.radar/DS.165h0/SI.kgld/sn.last
                 // DS.165h0 = product code 165, N0H (h0)
-                var level3url = `${phpProxy}https://tgftp.nws.noaa.gov/SL.us008001/DF.of/DC.radar/DS.${$('#productInput').val()}/SI.${$('#userStation').val().toLowerCase()}/sn.last`
+                var tiltProduct = tiltObject[$('#tiltInput').val()][$('#productInput').val()]
+                var level3url = `${phpProxy}https://tgftp.nws.noaa.gov/SL.us008001/DF.of/DC.radar/DS.${tiltProduct}/SI.${$('#userStation').val().toLowerCase()}/sn.last`
                 console.log(level3url)
-                console.log($('#productInput').val(), $('#userStation').val().toLowerCase())
+                console.log(tiltProduct, $('#userStation').val().toLowerCase())
                 loadFileObject(level3url, 'sn.last', 3);
             }
         }
@@ -723,33 +735,61 @@
         var theCurFileControl = new curFileControl;
         map.addControl(theCurFileControl, 'top-right');
 
+        var tiltObject = {
+            'tilt1': {
+                'ref': 'p94r0',
+                'vel': 'p99v0',
+                'hhc': '177hh',
+                'hyc': '165h0',
+                'srv': '56rm0',
+            },
+            'tilt2': {
+                'ref': 'p94r1',
+                'vel': 'p99v1',
+                'hhc': '177hh',
+                'hyc': '165h1',
+                'srv': '56rm1',
+            },
+            'tilt3': {
+                'ref': 'p94r2',
+                'vel': 'p99v2',
+                'hhc': '177hh',
+                'hyc': '165h2',
+                'srv': '56rm2',
+            },
+            'tilt4': {
+                'ref': 'p94r3',
+                'vel': 'p99v3',
+                'hhc': '177hh',
+                'hyc': '165h3',
+                'srv': '56rm3',
+            },
+        }
+
         $('#levelInput').on('change', function() {
             if ($('#levelInput').val() == 'l2') {
                 document.getElementById('productStuff').style.display = 'none';
+                document.getElementById('tiltStuff').style.display = 'none';
                 $('#productInput').empty();
             } else if ($('#levelInput').val() == 'l3') {
                 $('#productStuff').on('change', function() {
-                    console.log('ch')
-                    loadLatestFile('l3');
+                    if ($('#levelInput').val() == 'l3' && map.getLayer('baseReflectivity')) {
+                        loadLatestFile('l3');
+                    }
+                })
+                $('#tiltInput').on('change', function() {
+                    if ($('#levelInput').val() == 'l3' && map.getLayer('baseReflectivity')) {
+                        loadLatestFile('l3');
+                    }
                 })
                 document.getElementById('productStuff').style.display = 'block';
+                document.getElementById('tiltStuff').style.display = 'block';
 
-                document.getElementById('productInput').add(new Option('Base Reflectivity Tilt 1', 'p94r0', false, true));
-                document.getElementById('productInput').add(new Option('Base Reflectivity Tilt 2', 'p94r1'));
-                document.getElementById('productInput').add(new Option('Base Reflectivity Tilt 3', 'p94r2'));
-                document.getElementById('productInput').add(new Option('Base Reflectivity Tilt 4', 'p94r3'));
-
-                document.getElementById('productInput').add(new Option('Hybrid Hydrometer Classification', '177hh'));
-
-                document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 1', '165h0'));
-                document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 2', '165h1'));
-                document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 3', '165h2'));
-                document.getElementById('productInput').add(new Option('Hydrometer Classification Tilt 4', '165h3'));
-
-                document.getElementById('productInput').add(new Option('Storm Relative Velocity Tilt 1', '56rm0'));
-                document.getElementById('productInput').add(new Option('Storm Relative Velocity Tilt 2', '56rm1'));
-                document.getElementById('productInput').add(new Option('Storm Relative Velocity Tilt 3', '56rm2'));
-                document.getElementById('productInput').add(new Option('Storm Relative Velocity Tilt 4', '56rm3'));
+                document.getElementById('productInput').add(new Option('Base Reflectivity', 'ref', false, true));
+                document.getElementById('productInput').add(new Option('Base Velocity', 'vel'));
+                document.getElementById('productInput').add(new Option('Hydrometer Classification', 'hyc'));
+                document.getElementById('productInput').add(new Option('Hybrid Hydrometer Classification', 'hhc'));
+                document.getElementById('productInput').add(new Option('Storm Relative Velocity', 'srv'));
             }
         })
         $('#levelInput').val('l3');
